portage-bashrc-mv-21.0
----------------------
- Attempt to handle arguments with parameters using an eplicit list, see
  https://github.com/vaeth/portage-bashrc-mv/issues/10

portage-bashrc-mv-20.7
----------------------
- Filter -flto-odr-type-merging with USE_NONGNU=1

portage-bashrc-mv-20.6
----------------------
- Alessandro-Barbieri: Filter warnings not available in clang

portage-bashrc-mv-20.5
----------------------
- Jannik2099: filter LTO-requiring flags if LTO is not enabled on clang
- jiblime: Set USE_NONGNU=1 by default with active USE flag clang

portage-bashrc-mv-20.4
----------------------
- enable -fstack-clash-protection on clang

portage-bashrc-mv-20.3
----------------------
- Even more non-GNU

portage-bashrc-mv-20.2
----------------------
- More non-GNU

portage-bashrc-mv-20.1
----------------------
- SPDX-License-Identifier

portage-bashrc-mv-20.0
----------------------
- Backward-incompatible change:
  /-foo/-bar will not add -bar if -foo cannot be found.
  The previous behaviour can be achieved by /-foo/-bar -bar.
  As a side-effect, do not unconditionally add -fstack-check for non-GNU.
- Output C++ and LD version.

portage-bashrc-mv-19.0
----------------------
Support F*FLAGS, and let *FLAGS= and *FLAGS+= include F*FLAGS.
You can use C*FLAGS=... LDFLAGS= OPTLDFLAGS= or C*FLAGS+=, respectively,
if you do not like the latter two.

portage-bashrc-mv-18.1
----------------------
Support QLOP_COUNT (default 3). Thanks to guitoo for the suggestion,
see https://github.com/vaeth/portage-bashrc-mv/issues/18
Also evaluate NOQLOP according to the usual true/false logic.

portage-bashrc-mv-18.0
----------------------
It is now possible to set NOQLOP to skip the qlop feature (e.g. for
comptability problems with old qlop versions). In addition, the FLAG feature
is now the first file parsed so that it /etc/portage/package.cflags can be
used to set this variable.
The AUTHORS file now finally contains the contributor to 17.3: